@@ -65,7 +65,8 @@ public class WebSecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(allowedOrigin.split(","))); // frontend origin
+        List<String> originList = Arrays.asList(allowedOrigin.split(","));
+        config.setAllowedOrigins(List.of(originList.getFirst(), originList.getLast())); // frontend origin
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowCredentials(true); // important for cookies
         config.setAllowedHeaders(List.of("*")); // allow all headers
